--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
             "react-app/jest"
         ]
     },
+    "proxy":"http://localhost:9999",
     
     "browserslist": {
         "production": [
